--- a/server-app/package.json
+++ b/server-app/package.json
@@ -4,16 +4,17 @@
   "description": "",
   "license": "ISC",
   "author": "",
-  "type": "module",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
+    "mongoose": "^9.2.1",
     "nanoid": "^3.0.0",
     "nodemon": "^3.1.14"
   }
